Refactored project page
The project page was an html page with a lot of info and manually edited cards.
Now it is automatically generated, based on the project pages.

--- a/pages/projects-bla.html
+++ b/pages/projects-bla.html
@@ -28,7 +28,7 @@
           <h3>Dwarf Fortress Server Tutorial</h3>
           <p>A tutorial explaining how to set up a Dwarf Fortress multiplayer server utilizing DFHack and DFPlex</p>
           <p>This project is currently under development. More details coming soon.</p>
-          <a href="../projects/df_server.html" target="_blank" class="btn-accent">View Project</a>
+          <a href="../projects/df_server.html" target="_self" class="btn-accent">View Project</a>
         </div>
 
         <div class="project-card wip">
@@ -58,7 +58,6 @@
           <span class="wip-tag">Work in Progress</span>
         </div>
 
-        
         <!-- Add more cards here -->
       </div>
     </main>
