Lots of Changes.

--- a/index-br.html
+++ b/index-br.html
@@ -6,23 +6,6 @@
   <title>Henrique Boldrin - CV</title>
   <link rel="stylesheet" href="assets/styles/CV-style.css" />
 
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GPEW4VK3GX"></script>
-  <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-GPEW4VK3GX');
-  </script>
-
-<script type="text/javascript">
-    (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-    })(window, document, "clarity", "script", "rxcbrrvyir");
-  </script> 
 
 </head>
 
@@ -144,7 +127,7 @@
 
       <section>
         <h2>Educação</h2>
-        <p><strong>UTFPR (2019 - Atual)</strong><br />
+        <p><strong>UTFPR (2026)</strong><br />
         Atualmente finalizando um Bacharelado em Ciência da Computação, produzindo trabalho de conclusão de curso voltado à área de predição de retorno monetário de Fundos de Investimento Imobiliário.</p>
       </section>
 
