--- a/index.html
+++ b/index.html
@@ -7,24 +7,6 @@
   <link rel="stylesheet" href="assets/styles/CV-style.css" />
 
 
-    <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GPEW4VK3GX"></script>
-  <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-GPEW4VK3GX');
-  </script>
-
-  <script type="text/javascript">
-    (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-    })(window, document, "clarity", "script", "rxcbrrvyir");
-  </script> 
-
 
 </head>
 <body>
@@ -134,7 +116,7 @@
 
       <section>
         <h2>Education</h2>
-        <p><strong>UTFPR (2019 - Present)</strong><br />
+        <p><strong>UTFPR (2026)</strong><br />
         Currently finishing a Bachelor’s degree in Computer Science, working on a graduation thesis focused on predicting returns from Real Estate Investment Trusts.</p>
       </section>
 
